# Launcher3-7.0

./: .gitignore  AndroidManifest-common.xml  AndroidManifest.xml  CMakeLists.txt  build.gradle  gradle.properties  olc_release_key.keystore  settings.gradle  test.jks
assets/: predict.conf  train.conf
cpp/: native-lib.cpp
cpp/include/LightGBM/utils/: log.h
cpp/lightgbm/metric/: xentropy_metric.hpp
cpp/lightgbm/network/: socket_wrapper.hpp
launcher/: CMakeLists.txt  build.gradle  proguard-rules.pro
launcher/src/main/: AndroidManifest.xml
launcher/src/main/cpp/: native-lib.cpp
launcher/src/main/res/values/: config.xml
res/drawable/: ic_training.xml
res/layout/: activity_app_type_selection.xml  activity_train.xml  all_apps.xml  item_app.xml  item_app_type.xml  overview_panel.xml
res/layout-port/: launcher.xml
res/layout-sw720dp/: launcher.xml
res/values/: config.xml  strings.xml
src/com/android/launcher3/: AllAppsList.java  AppInfo.java  DeviceProfile.java  IconCache.java  InvariantDeviceProfile.java  Launcher.java  LauncherApplication.java  LauncherModel.java  PinchAnimationManager.java  SettingsActivity.java  Utilities.java  Workspace.java  WorkspaceStateTransitionAnimation.java
src/com/android/launcher3/allapps/: AllAppsTransitionController.java  AlphabeticalAppsList.java
src/com/android/launcher3/behavior/: DateUtils.java
src/com/android/predict/: AppTypeActivity.java  AppTypeInfo.java  Constants.java  GreenDapWarpper.java  LauncherApplication.java  LightGbmService.java  LockActivity.java  TestJni.java
(+111 files in other folders)
